--- a/RepositoryParser/RepositoryParser/packages.config
+++ b/RepositoryParser/RepositoryParser/packages.config
@@ -3,4 +3,6 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="mvvmlight" version="5.2.0.0" targetFramework="net452" />
   <package id="mvvmlightlibs" version="5.2.0.0" targetFramework="net452" />
+  <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net452" />
+  <package id="WPFToolkit.DataVisualization" version="3.5.50211.1" targetFramework="net452" />
 </packages>
