Added: ScrollSynchronizer class

--- a/RepositoryParser/RepositoryParser.Core/packages.config
+++ b/RepositoryParser/RepositoryParser.Core/packages.config
@@ -7,4 +7,6 @@
   <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net452" />
   <package id="System.Data.SQLite.EF6" version="1.0.99.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Linq" version="1.0.99.0" targetFramework="net452" />
+  <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net452" />
+  <package id="WPFToolkit.DataVisualization" version="3.5.50211.1" targetFramework="net452" />
 </packages>
