--- a/RepositoryParser/RepositoryParser.Core/packages.config
+++ b/RepositoryParser/RepositoryParser.Core/packages.config
@@ -2,11 +2,15 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
+  <package id="GitSharp" version="0.3" targetFramework="net452" />
   <package id="mvvmlightlibs" version="5.2.0.0" targetFramework="net452" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.99.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net452" />
   <package id="System.Data.SQLite.EF6" version="1.0.99.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Linq" version="1.0.99.0" targetFramework="net452" />
+  <package id="Tamir.SharpSSH" version="1.1.1.13" targetFramework="net452" />
+  <package id="Winterdom.IO.FileMap" version="2.0.2.0" targetFramework="net452" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net452" />
   <package id="WPFToolkit.DataVisualization" version="3.5.50211.1" targetFramework="net452" />
 </packages>
