--- a/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
+++ b/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Models\BranchForRepoTable.cs" />
     <Compile Include="Models\BranchTable.cs" />
+    <Compile Include="Models\ChangesForCommitTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ScrollSynchronizer.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
