--- a/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
+++ b/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
@@ -129,8 +129,10 @@
     <Compile Include="Models\ChangesForCommitTable.cs" />
     <Compile Include="Models\ChangesTable.cs" />
     <Compile Include="Models\CommitForBranchTable.cs" />
+    <Compile Include="Models\GitCommits.cs" />
     <Compile Include="Models\SqLiteHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DataToCSV.cs" />
     <Compile Include="Utils\ScrollSynchronizer.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
   </ItemGroup>
@@ -141,7 +143,6 @@
   <ItemGroup>
     <Folder Include="Interfaces\" />
     <Folder Include="Messages\" />
-    <Folder Include="Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets')" />
