--- a/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
+++ b/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
@@ -130,6 +130,8 @@
     <Compile Include="Models\ChangesTable.cs" />
     <Compile Include="Models\CommitForBranchTable.cs" />
     <Compile Include="Models\GitCommits.cs" />
+    <Compile Include="Models\GitRepository.cs" />
+    <Compile Include="Models\GitRepositoryTable.cs" />
     <Compile Include="Models\SqLiteHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataToCSV.cs" />
