Added: DataMessageToDisplay class

--- a/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
+++ b/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Messages\DataMessageToAnalisys.cs" />
     <Compile Include="Messages\DataMessageToCharts.cs" />
+    <Compile Include="Messages\DataMessageToDisplay.cs" />
     <Compile Include="Models\BranchForRepoTable.cs" />
     <Compile Include="Models\BranchTable.cs" />
     <Compile Include="Models\ChangesForCommitTable.cs" />
