--- a/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
+++ b/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
@@ -125,6 +125,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Interfaces\IWindowService.cs" />
     <Compile Include="Messages\DataMessageToAnalisys.cs" />
     <Compile Include="Messages\DataMessageToCharts.cs" />
     <Compile Include="Messages\DataMessageToDisplay.cs" />
@@ -139,16 +140,15 @@
     <Compile Include="Models\SqLiteHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataToCSV.cs" />
+    <Compile Include="Services\WindowService.cs" />
     <Compile Include="Utils\ScrollSynchronizer.cs" />
-    <Compile Include="ViewModel\AnalisysWindowViewModel.cs" />
-    <Compile Include="ViewModel\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Interfaces\" />
+    <Folder Include="ViewModel\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets')" />
