--- a/RepositoryParser/RepositoryParser/packages.config
+++ b/RepositoryParser/RepositoryParser/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
+  <package id="Extended.Wpf.Toolkit" version="2.6" targetFramework="net452" />
   <package id="mvvmlight" version="5.2.0.0" targetFramework="net452" />
   <package id="mvvmlightlibs" version="5.2.0.0" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.99.0" targetFramework="net452" />
