--- a/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
+++ b/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
@@ -125,6 +125,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Interfaces\IGitRepositoryService.cs" />
+    <Compile Include="Interfaces\ISqLiteService.cs" />
     <Compile Include="Interfaces\IWindowService.cs" />
     <Compile Include="Messages\DataMessageToAnalisys.cs" />
     <Compile Include="Messages\DataMessageToCharts.cs" />
@@ -135,9 +137,9 @@
     <Compile Include="Models\ChangesTable.cs" />
     <Compile Include="Models\CommitForBranchTable.cs" />
     <Compile Include="Models\GitCommits.cs" />
-    <Compile Include="Services\GitRepository.cs" />
+    <Compile Include="Services\GitRepositoryService.cs" />
     <Compile Include="Models\GitRepositoryTable.cs" />
-    <Compile Include="Services\SqLiteHandler.cs" />
+    <Compile Include="Services\SqLiteService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataToCSV.cs" />
     <Compile Include="Utils\ScrollSynchronizer.cs" />
