Added chart of changes

--- a/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
+++ b/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Interfaces\ISqLiteService.cs" />
     <Compile Include="Interfaces\IWindowService.cs" />
     <Compile Include="Messages\DataMessageToAnalisys.cs" />
+    <Compile Include="Messages\DataMessageToChartOfChanges.cs" />
     <Compile Include="Messages\DataMessageToCharts.cs" />
     <Compile Include="Messages\DataMessageToDisplay.cs" />
     <Compile Include="Models\BranchForRepoTable.cs" />
