--- a/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
+++ b/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
@@ -124,7 +124,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Interfaces\IDifferencesColoringService.cs" />
     <Compile Include="Interfaces\IGitRepositoryService.cs" />
     <Compile Include="Interfaces\ISqLiteService.cs" />
@@ -152,9 +151,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\Enums\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
