--- a/RepositoryParser/RepositoryParser.Core/packages.config
+++ b/RepositoryParser/RepositoryParser.Core/packages.config
@@ -4,6 +4,7 @@
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="GitSharp" version="0.3" targetFramework="net452" />
   <package id="mvvmlightlibs" version="5.2.0.0" targetFramework="net452" />
+  <package id="SharpSvn.1.9-x64" version="1.9003.3845.110" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.99.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net452" />
