--- a/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
+++ b/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
@@ -165,10 +165,10 @@
     <Compile Include="Models\ChangesForCommitTable.cs" />
     <Compile Include="Models\ChangesTable.cs" />
     <Compile Include="Models\CommitForBranchTable.cs" />
-    <Compile Include="Models\GitCommits.cs" />
+    <Compile Include="Models\CommitTable.cs" />
     <Compile Include="Services\DifferencesColoringService.cs" />
     <Compile Include="Services\GitRepositoryService.cs" />
-    <Compile Include="Models\GitRepositoryTable.cs" />
+    <Compile Include="Models\RepositoryTable.cs" />
     <Compile Include="Services\SqLiteService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataToCSV.cs" />
