Added SvnService class

--- a/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
+++ b/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Services\SqLiteService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataToCSV.cs" />
+    <Compile Include="Services\SvnService.cs" />
     <Compile Include="Utils\ScrollSynchronizer.cs" />
   </ItemGroup>
   <ItemGroup>
