--- a/RepositoryParser/RepositoryParser/RepositoryParser.csproj
+++ b/RepositoryParser/RepositoryParser/RepositoryParser.csproj
@@ -164,6 +164,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Conventers\AddedToDeletedStringConventer.cs" />
+    <Compile Include="Conventers\BoolToBackgroundColorConventer.cs" />
     <Compile Include="Conventers\BoolToVisibilityConventer.cs" />
     <Compile Include="Conventers\ChangeTypeToBackgroundColorConventer.cs" />
     <Compile Include="Conventers\DateFormat.cs" />
@@ -295,10 +296,15 @@
       <Name>RepositoryParser.Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Assets\Git-64.png" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\Ratings Filled-50.png" />
     <Resource Include="Assets\Statistics_Filled-50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\svn-64.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets')" />
