--- a/RepositoryParser/RepositoryParser/RepositoryParser.csproj
+++ b/RepositoryParser/RepositoryParser/RepositoryParser.csproj
@@ -296,15 +296,33 @@
       <Name>RepositoryParser.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Resource Include="Assets\Git-64.png" />
+    <Resource Include="Assets\Icons\Add Database-52.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Assets\Ratings Filled-50.png" />
-    <Resource Include="Assets\Statistics_Filled-50.png" />
+    <Resource Include="Assets\Icons\Combo Chart Filled-50.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Assets\svn-64.ico" />
+    <Resource Include="Assets\Icons\CSV Filled-50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Icons\Delete-64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Icons\Git-64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Icons\Ratings Filled-50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Icons\Refresh-64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Icons\Statistics_Filled-50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Icons\svn-64.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets')" />
