--- a/RepositoryParser/RepositoryParser/RepositoryParser.csproj
+++ b/RepositoryParser/RepositoryParser/RepositoryParser.csproj
@@ -296,7 +296,12 @@
       <Name>RepositoryParser.Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Assets\Icons\Area-Chart.png" />
+    <Resource Include="Assets\Icons\Column-Chart.png" />
+    <Resource Include="Assets\Icons\Pie-Chart.png" />
+    <Resource Include="Assets\Icons\Points-Chart.png" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\Icons\Add Database-52.png" />
   </ItemGroup>
@@ -323,6 +328,10 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Assets\Icons\svn-64.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Icons\Clear.png" />
+    <Resource Include="Assets\Icons\Compare-52.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets')" />
