--- a/RepositoryParser/RepositoryParser/RepositoryParser.csproj
+++ b/RepositoryParser/RepositoryParser/RepositoryParser.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Conventers\DateFormat.cs" />
     <Compile Include="Conventers\EnumToColorConventer.cs" />
     <Compile Include="Conventers\NegativeBoolToVisibilityConventer.cs" />
+    <Compile Include="Conventers\StringToImageConventer.cs" />
     <Compile Include="Properties\Resources.pl-PL.Designer.cs">
       <DependentUpon>Resources.pl-PL.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -332,6 +333,13 @@
   <ItemGroup>
     <Resource Include="Assets\Icons\Clear.png" />
     <Resource Include="Assets\Icons\Compare-52.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Images\git_logo_grey.png" />
+    <Resource Include="Assets\Images\svn_logo_grey.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Images\transparent.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets')" />
