--- a/RepositoryParser/RepositoryParser/RepositoryParser.csproj
+++ b/RepositoryParser/RepositoryParser/RepositoryParser.csproj
@@ -341,6 +341,12 @@
   <ItemGroup>
     <Resource Include="Assets\Images\transparent.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Icons\Analysis_grey.png" />
+    <Resource Include="Assets\Icons\Delete_grey.png" />
+    <Resource Include="Assets\Icons\Export_grey.png" />
+    <Resource Include="Assets\Icons\Refresh_grey.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.99.0\build\net451\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
