--- a/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
+++ b/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Models\ChangesTable.cs" />
     <Compile Include="Models\CommitForBranchTable.cs" />
     <Compile Include="Models\CommitTable.cs" />
+    <Compile Include="Models\GitCloneBranch.cs" />
     <Compile Include="Models\UserCodeFrequency.cs" />
     <Compile Include="Services\DifferencesColoringService.cs" />
     <Compile Include="Services\GitRepositoryService.cs" />
