--- a/RepositoryParser/RepositoryParser.Core/packages.config
+++ b/RepositoryParser/RepositoryParser.Core/packages.config
@@ -3,6 +3,8 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="GitSharp" version="0.3" targetFramework="net452" />
+  <package id="LibGit2Sharp" version="0.22.0" targetFramework="net452" />
+  <package id="LibGit2Sharp.NativeBinaries" version="1.0.129" targetFramework="net452" />
   <package id="mvvmlightlibs" version="5.2.0.0" targetFramework="net452" />
   <package id="SharpSvn.1.9-x64" version="1.9003.3845.110" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
