Added GitService implementation

--- a/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
+++ b/RepositoryParser/RepositoryParser.Core/RepositoryParser.Core.csproj
@@ -157,6 +157,7 @@
   <ItemGroup>
     <Compile Include="Interfaces\IDifferencesColoringService.cs" />
     <Compile Include="Interfaces\IGitRepositoryService.cs" />
+    <Compile Include="Interfaces\IGitService.cs" />
     <Compile Include="Interfaces\ISqLiteService.cs" />
     <Compile Include="Interfaces\ISvnService.cs" />
     <Compile Include="Interfaces\IWindowService.cs" />
@@ -177,6 +178,7 @@
     <Compile Include="Services\GitCloneService.cs" />
     <Compile Include="Services\GitRepositoryService.cs" />
     <Compile Include="Models\RepositoryTable.cs" />
+    <Compile Include="Services\GitService.cs" />
     <Compile Include="Services\SqLiteService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataToCSV.cs" />
